--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^3.0.1",
     "react-scroll": "^1.8.6",
     "web-vitals": "^2.1.0"
   },
