--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^4.3.1",
     "react-scripts": "^3.0.1",
     "react-scroll": "^1.8.6",
+    "react-typed": "^2.0.12",
     "web-vitals": "^2.1.0"
   },
   "devDependencies": {
